Made casing of API\Api suffix consistent across projects and assemblies

--- a/Superscribe.Demo.WebAPI/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
+++ b/Superscribe.Demo.WebAPI/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
@@ -1,5 +1,5 @@
 @using Superscribe.Demo.WebAPI.Areas.HelpPage
-@model InvalidSample
+@model Superscribe.Demo.WebApi.Areas.HelpPage.SampleGeneration.InvalidSample
 
 @if (HttpContext.Current.IsDebuggingEnabled)
 {
