--- a/Superscribe.Demo.WebAPI/Areas/HelpPage/Views/Help/DisplayTemplates/TextSample.cshtml
+++ b/Superscribe.Demo.WebAPI/Areas/HelpPage/Views/Help/DisplayTemplates/TextSample.cshtml
@@ -1,5 +1,5 @@
 @using Superscribe.Demo.WebAPI.Areas.HelpPage
-@model TextSample
+@model Superscribe.Demo.WebApi.Areas.HelpPage.SampleGeneration.TextSample
 
 <pre class="wrapped">
 @Model.Text
