Further casing corrections

--- a/Superscribe.Demo.WebAPI/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
+++ b/Superscribe.Demo.WebAPI/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
@@ -1,7 +1,7 @@
 @using System.Web.Http
 @using System.Web.Http.Description
-@using Superscribe.Demo.WebAPI.Areas.HelpPage
-@using Superscribe.Demo.WebAPI.Areas.HelpPage.Models
+@using Superscribe.Demo.WebApi.Areas.HelpPage
+@using Superscribe.Demo.WebApi.Areas.HelpPage.Models
 @model IGrouping<string, ApiDescription>
 
 <h2 id="@Model.Key">@Model.Key</h2>
