--- a/Superscribe.Demo.WebAPI/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
+++ b/Superscribe.Demo.WebAPI/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using Superscribe.Demo.WebAPI.Areas.HelpPage.Models
+@using Superscribe.Demo.WebApi.Areas.HelpPage.Models
 @model HelpPageApiModel
 
 @{ 
