--- a/Superscribe.Demo.WebAPI/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/Superscribe.Demo.WebAPI/Areas/HelpPage/Views/Help/Index.cshtml
@@ -1,7 +1,7 @@
 @using System.Web.Http
 @using System.Web.Http.Description
 @using System.Collections.ObjectModel
-@using Superscribe.Demo.WebAPI.Areas.HelpPage.Models
+@using Superscribe.Demo.WebApi.Areas.HelpPage.Models
 @model Collection<ApiDescription>
 
 @{
