--- a/Superscribe.Demo.WebAPI/Areas/HelpPage/Views/Help/DisplayTemplates/ImageSample.cshtml
+++ b/Superscribe.Demo.WebAPI/Areas/HelpPage/Views/Help/DisplayTemplates/ImageSample.cshtml
@@ -1,4 +1,4 @@
-@using Superscribe.Demo.WebAPI.Areas.HelpPage
+@using Superscribe.Demo.WebApi.Areas.HelpPage
 @model Superscribe.Demo.WebApi.Areas.HelpPage.SampleGeneration.ImageSample
 
 <img src="@Model.Src" />
