--- a/Superscribe.Demo.WebAPI/Areas/HelpPage/Views/Help/DisplayTemplates/TextSample.cshtml
+++ b/Superscribe.Demo.WebAPI/Areas/HelpPage/Views/Help/DisplayTemplates/TextSample.cshtml
@@ -1,4 +1,4 @@
-@using Superscribe.Demo.WebAPI.Areas.HelpPage
+@using Superscribe.Demo.WebApi.Areas.HelpPage
 @model Superscribe.Demo.WebApi.Areas.HelpPage.SampleGeneration.TextSample
 
 <pre class="wrapped">
