--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,147 +89,7 @@
   </div>
 </div>
 
-<!-- FOOTER -->
-<footer id="footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-3 col">
-        <div class="block contact-block"> 
-          <!--@todo: replace with company contact details-->
-          <h3>Contact Us</h3>
-          <address>
-          <p><abbr title="Phone"><i class="icon-phone"></i></abbr> 019223 8092344</p>
-          <p><abbr title="Email"><i class="icon-envelope"></i></abbr> info@appstrap.me</p>
-          <p><abbr title="Address"><i class="icon-home"></i></abbr> Sunshine House, Sunville. SUN12 8LU.</p>
-          </address>
-        </div>
-      </div>
-      <div class="col-md-5 col">
-        <div class="block">
-          <h3>About Us</h3>
-          <p>Making the web a prettier place one template at a time! We make beautiful, quality, responsive Drupal & web templates!</p>
-        </div>
-      </div>
-      <div class="col-md-4 col">
-        <div class="block newsletter">
-          <h3>Newsletter</h3>
-          <p>Stay up to date with our latest news and product releases by signing up to our newsletter.</p>
-          <!--@todo: replace with mailchimp code-->
-          <form role="form">
-            <div class="input-group input-group-sm">
-              <label class="sr-only" for="email-field">Email</label>
-              <input type="text" class="form-control" id="email-field" placeholder="Email">
-              <span class="input-group-btn">
-              <button class="btn btn-primary" type="button">Go!</button>
-              </span> </div>
-          </form>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div id="toplink"><a href="#top" class="top-link" title="Back to top">Back To Top <i class="icon-chevron-up"></i></a></div>
-      <!--@todo: replace with company copyright details-->
-      <div class="subfooter">
-        <div class="col-md-6">
-          <p>Site template by <a href="#">AppStrap</a> | Copyright 2012 &copy; AppStrap</p>
-        </div>
-        <div class="col-md-6">
-          <ul class="list-inline footer-menu">
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Contact Us</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</footer>
-
-<!--Hidden elements - excluded from jPanel Menu on mobile-->
-<div class="hidden-elements jpanel-menu-exclude"> 
-  <!--@modal - signup modal-->
-  <div class="modal fade" id="signup-modal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">Sign Up</h4>
-        </div>
-        <div class="modal-body">
-          <form action="signup.htm" role="form">
-            <h5>Price Plan</h5>
-            <select class="form-control">
-              <option>Basic</option>
-              <option>Pro</option>
-              <option>Pro +</option>
-            </select>
-            <h5>Account Information</h5>
-            <div class="form-group">
-              <label class="sr-only" for="signup-first-name">First Name</label>
-              <input type="text" class="form-control" id="signup-first-name" placeholder="First name">
-            </div>
-            <div class="form-group">
-              <label class="sr-only" for="signup-last-name">Last Name</label>
-              <input type="text" class="form-control" id="signup-last-name" placeholder="Last name">
-            </div>
-            <div class="form-group">
-              <label class="sr-only" for="signup-username">Userame</label>
-              <input type="text" class="form-control" id="signup-username" placeholder="Username">
-            </div>
-            <div class="form-group">
-              <label class="sr-only" for="signup-email">Email address</label>
-              <input type="email" class="form-control" id="signup-email" placeholder="Email address">
-            </div>
-            <div class="form-group">
-              <label class="sr-only" for="signup-password">Password</label>
-              <input type="password" class="form-control" id="signup-password" placeholder="Password">
-            </div>
-            <div class="checkbox">
-              <label>
-                <input type="checkbox" value="term">
-                I agree with the Terms and Conditions. </label>
-            </div>
-            <button class="btn btn-primary" type="submit">Sign up</button>
-          </form>
-        </div>
-        <div class="modal-footer"> <small>Already signed up? <a href="login.htm">Login here</a>.</small> </div>
-      </div>
-      <!-- /.modal-content --> 
-    </div>
-    <!-- /.modal-dialog --> 
-  </div>
-  <!-- /.modal --> 
-  
-  <!--@modal - login modal-->
-  <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">Login</h4>
-        </div>
-        <div class="modal-body">
-          <form action="login.htm" role="form">
-            <div class="form-group">
-              <label class="sr-only" for="login-email">Email</label>
-              <input type="email" id="login-email" class="form-control email" placeholder="Email">
-            </div>
-            <div class="form-group">
-              <label class="sr-only" for="login-password">Password</label>
-              <input type="password" id="login-password" class="form-control password" placeholder="Password">
-            </div>
-            <button type="button" class="btn btn-primary">Login</button>
-          </form>
-        </div>
-        <div class="modal-footer"> <small>Not a member? <a href="#" class="signup">Sign up now!</a></small><br />
-          <small><a href="#">Forgotten password?</a></small> </div>
-      </div>
-      <!-- /.modal-content --> 
-    </div>
-    <!-- /.modal-dialog --> 
-  </div>
-  <!-- /.modal --> 
-</div>
+{% include footer.html %}
 
 <!--Scripts --> 
 <script src="js/jquery.js"></script>
