Updated contact details

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,8 @@
           <!--@todo: replace with company contact details-->
           <h3>Contact</h3>
           <address>
-          <p><abbr title="Email"><i class="icon-envelope"></i></abbr> roysvork@gmail.com</p>
-          <p><abbr title="Twitter"><i class="icon-twitter"></i></abbr> @roysvork</p>
+          <p><abbr title="Email"><i class="icon-envelope"></i></abbr> roysvork<span>@</span>gmail<span>.</span>com</p>
+          <p><abbr title="Twitter"><i class="icon-twitter"></i></abbr><a href="https://twitter.com/roysvork">@roysvork</a></p>
           </address>
         </div>
       </div>
