Converted logo graphics to svg

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -87,7 +87,7 @@
         <div class="slide">
           <div class="col-md-7"><img src="img/slides/slide1.png" alt="Instacode" class="img-responsive" /></div>
             <div class="col-md-5 caption">
-              <img src="img/logoblack.png" width="297" height="80" alt="logo" class="img-responsive" />
+              <i class="logoblack"></i>
               <h1 style="padding-top:5px;">Make Routing a First Class Citizen in your Web Application</h1>
               <h4>Bring the benefits of super flexible, ultra-expressive graph based routing to your Asp.Net, Web API and OWIN project with Superscribe</h4>
               <div class="btn-group user-menu pull-right" style="padding-top:10px;">
