Trying to get font to work

--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -69,9 +69,10 @@
  */
 @font-face
 {
-font-family: Bulgari;
-src: url('../fonts/bulgari.ttf');
+	font-family: Bulgari;
+	src: url('../fonts/bulgari.ttf') format('truetype');
 }
+
 .logod1
 {
   background-image: url('../img/superscribe-blue-white.svg');
