--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,8 +1,14 @@
 <!--main navigation-->
 <ul class="nav container" id="main-menu">
-  <li class="home-link"><a href="index.html"><i class="logod1"></i><span class="hidden">Home</span></a></li>
-  <li><a href="features.html" class="menu-item">Features</a></li>
-  <li><a href="customers.html" class="menu-item">Examples</a></li>
-  <li><a href="documentation.html" class="menu-item">Documentation</a></li>
-  <li><a href="about.html" class="menu-item">Graph Based Routing</a></li>
+  	<li class="home-link"><a href="index.html"><i class="logod1"></i><span class="hidden">Home</span></a></li>
+  	<li><a href="features.html" class="menu-item">Features</a></li>
+  	<li><a href="examples.html" class="menu-item">Examples</a></li>
+  	<li class="dropdown"> <a href="documentation.html" class="dropdown-toggle" id="about-drop" data-toggle="dropdown">Documentation +</a> 
+	  <!-- Dropdown Menu -->
+	  <ul class="dropdown-menu" role="menu" aria-labelledby="about-drop">
+	    <li role="presentation"><a role="menuitem" href="documentation.html" tabindex="-1" class="menu-item">Documentation</a></li>
+	    <li role="presentation"><a role="menuitem" href="apireference.html" tabindex="-1" class="menu-item">API Reference</a></li>
+	  </ul>
+	</li>
+  	<li><a href="graphbasedrouting.html" class="menu-item">Graph Based Routing</a></li>
 </ul>
