Fixed homepage and banner links

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -66,7 +66,7 @@
       
       <!--user menu-->
       <div class="btn-group user-menu pull-right">
-        <a href="#fork" class="btn btn-primary fork" data-toggle="modal">Fork me on Github!</a>
+        <a href="http://github.com/roysvork/superscribe" target="_blank" class="btn btn-primary fork">Fork me on Github!</a>
       </div>
       
       <div class="container" style="padding:0px" >
@@ -91,7 +91,7 @@
               <h1 style="padding-top:5px;">Make Routing a First Class Citizen in your Web Application</h1>
               <h4>Bring the benefits of super flexible, ultra-expressive graph based routing to your Asp.Net, Web API and OWIN project with Superscribe</h4>
               <div class="btn-group user-menu pull-right" style="padding-top:10px;">
-                <a href="#fork" class="btn btn-primary fork" data-toggle="modal">What is Graph Based Routing?</a>
+                <a href="graphbasedrouting.html" class="btn btn-primary fork">What is Graph Based Routing?</a>
               </div>
             </div>
         </div>
