--- a/css/theme-style.css
+++ b/css/theme-style.css
@@ -2299,7 +2299,7 @@ ul.nav-tabs li.active a:hover {
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
-}
+}/*
 .features .feature img:hover {
   background-image: -webkit-gradient(linear, left 0%, left 100%, from(#f5f5f5), to(#e0e0e0));
   background-image: -webkit-linear-gradient(top, #f5f5f5, 0%, #e0e0e0, 100%);
@@ -2307,7 +2307,7 @@ ul.nav-tabs li.active a:hover {
   background-image: linear-gradient(to bottom, #f5f5f5 0%, #e0e0e0 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe0e0e0', GradientType=0);
-}
+}*/
 @media (min-width: 768px) {
   .features .feature {
     margin-bottom: 1em;
