Finished first cut of Graph Based Routing explanation and Pseudocode

--- a/css/theme-style.css
+++ b/css/theme-style.css
@@ -172,7 +172,7 @@ blockquote small img {
 }
 .block .title {
   font-size: 18px;
-  margin: 0 0 1.2em 0;
+  margin: 1em 0 1.2em 0;
   line-height: 1;
 }
 .mdrs .btn-block,
