--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -7,7 +7,7 @@
 	  <!-- Dropdown Menu -->
 	  <ul class="dropdown-menu" role="menu" aria-labelledby="about-drop">
 	    <li role="presentation"><a role="menuitem" href="documentation.html" tabindex="-1" class="menu-item">Documentation</a></li>
-	    <li role="presentation"><a role="menuitem" href="apireference.html" tabindex="-1" class="menu-item">API Reference</a></li>
+	    <li role="presentation"><a role="menuitem" href="faq.html" tabindex="-1" class="menu-item">FAQ</a></li>
 	  </ul>
 	</li>
   	<li><a href="graphbasedrouting.html" class="menu-item">Graph Based Routing</a></li>
