--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -48,6 +48,19 @@
 
 <!--Retina.js plugin - @see: http://retinajs.com/-->
 <script src="plugins/retina/js/retina-1.1.0.min.js"></script>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-46124374-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </head>
 
 <body onload="prettyPrint()" class="page page-index-static">
