Added Web Api 2.1 disclaimers, replaced OWIN with Owin

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -102,7 +102,7 @@
             <div class="col-md-5 caption">
               <i class="logoblack"></i>
               <h1 style="padding-top:5px;">Make Routing a First Class Citizen in your Web Application</h1>
-              <h4>Bring the benefits of super flexible, ultra-expressive graph based routing to your Asp.Net, Web API and OWIN project with Superscribe</h4>
+              <h4>Bring the benefits of super flexible, ultra-expressive graph based routing to your Asp.Net, Web API and Owin project with Superscribe</h4>
               <div class="btn-group user-menu pull-right" style="padding-top:10px;">
                 <a href="graphbasedrouting.html" class="btn btn-primary fork">What is Graph Based Routing?</a>
               </div>
